// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component snapshots should match snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="primary"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Push Me
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "primary",
      "children": "Push Me",
      "disabled": false,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "primary",
        "children": "Push Me",
        "disabled": false,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Button Component snapshots should match snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="primary"
    disabled={false}
    renderAs="button"
    size="large"
  >
    Push Me
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "primary",
      "children": "Push Me",
      "disabled": false,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "button",
      "size": "large",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "primary",
        "children": "Push Me",
        "disabled": false,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "button",
        "size": "large",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Button Component snapshots should match snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="primary"
    disabled={true}
    renderAs="button"
    size="normal"
  >
    Don't Push Me
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "primary",
      "children": "Don't Push Me",
      "disabled": true,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Don't Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "primary",
        "children": "Don't Push Me",
        "disabled": true,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Don't Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Button Component snapshots should match snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="secondary"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Push Me
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "secondary",
      "children": "Push Me",
      "disabled": false,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "secondary",
        "children": "Push Me",
        "disabled": false,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Button Component snapshots should match snapshot 5`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="secondary"
    disabled={true}
    renderAs="button"
    size="normal"
  >
    Don't Push Me
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "secondary",
      "children": "Don't Push Me",
      "disabled": true,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Don't Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "secondary",
        "children": "Don't Push Me",
        "disabled": true,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Don't Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Button Component snapshots should match snapshot 6`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="danger"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Dangerous action
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "danger",
      "children": "Dangerous action",
      "disabled": false,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Dangerous action",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "danger",
        "children": "Dangerous action",
        "disabled": false,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Dangerous action",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Button Component snapshots should match snapshot 7`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="success"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Push Me
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "success",
      "children": "Push Me",
      "disabled": false,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "success",
        "children": "Push Me",
        "disabled": false,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Button Component snapshots should match snapshot 8`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="warning"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Push Me
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "warning",
      "children": "Push Me",
      "disabled": false,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "warning",
        "children": "Push Me",
        "disabled": false,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Button Component snapshots should match snapshot 9`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="link"
    disabled={false}
    renderAs="button"
    size="normal"
  >
    Push Me
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "link",
      "children": "Push Me",
      "disabled": false,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "link",
        "children": "Push Me",
        "disabled": false,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Button Component snapshots should match snapshot 10`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="link"
    disabled={true}
    renderAs="button"
    size="normal"
  >
    Don't Push Me
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "link",
      "children": "Don't Push Me",
      "disabled": true,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "button",
      "size": "normal",
    },
    "ref": null,
    "rendered": "Don't Push Me",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "link",
        "children": "Don't Push Me",
        "disabled": true,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "button",
        "size": "normal",
      },
      "ref": null,
      "rendered": "Don't Push Me",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Button Component snapshots should match snapshot 11`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ForwardRef
    appearance="primary"
    disabled={false}
    renderAs="span"
    size="normal"
  >
    I'm not a button
  </ForwardRef>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "appearance": "primary",
      "children": "I'm not a button",
      "disabled": false,
      "forwardedComponent": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Button-sc-1i0dne9-0",
          "isStatic": false,
          "rules": Array [
            "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
            [Function],
            ";line-height:",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
            [Function],
            ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
            [Function],
            ";}",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
            [Function],
            ";",
          ],
        },
        "defaultProps": Object {
          "appearance": "secondary",
          "disabled": false,
          "renderAs": "button",
          "size": "normal",
        },
        "displayName": "Button",
        "foldedComponentIds": Array [],
        "propTypes": Object {
          "appearance": [Function],
          "children": [Function],
          "className": [Function],
          "disabled": [Function],
          "renderAs": [Function],
          "size": [Function],
          "type": [Function],
        },
        "render": [Function],
        "styledComponentId": "Button-sc-1i0dne9-0",
        "target": [Function],
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
        Symbol(Symbol.hasInstance): [Function],
      },
      "forwardedRef": null,
      "renderAs": "span",
      "size": "normal",
    },
    "ref": null,
    "rendered": "I'm not a button",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "appearance": "primary",
        "children": "I'm not a button",
        "disabled": false,
        "forwardedComponent": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Button-sc-1i0dne9-0",
            "isStatic": false,
            "rules": Array [
              "display:inline-flex;flex-wrap:nowrap;justify-content:center;align-items:center;box-sizing:border-box;font-size:",
              [Function],
              ";line-height:",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";border:solid 1px transparent;transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;cursor:pointer;max-width:100%;overflow:hidden;text-overflow:ellipsis;font-family:inherit;font-weight:normal;&:hover{box-shadow:",
              [Function],
              ";transition:border-color 150ms linear,background-color 150ms linear,box-shadow 150ms linear;}&:disabled{cursor:not-allowed;}&:hover:disabled{box-shadow:",
              [Function],
              ";}",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
              [Function],
              ";",
            ],
          },
          "defaultProps": Object {
            "appearance": "secondary",
            "disabled": false,
            "renderAs": "button",
            "size": "normal",
          },
          "displayName": "Button",
          "foldedComponentIds": Array [],
          "propTypes": Object {
            "appearance": [Function],
            "children": [Function],
            "className": [Function],
            "disabled": [Function],
            "renderAs": [Function],
            "size": [Function],
            "type": [Function],
          },
          "render": [Function],
          "styledComponentId": "Button-sc-1i0dne9-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
        "forwardedRef": null,
        "renderAs": "span",
        "size": "normal",
      },
      "ref": null,
      "rendered": "I'm not a button",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": false,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": true,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
